--- a/package.json
+++ b/package.json
@@ -6,9 +6,20 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "bootstrap": "4.3.1",
+    "fabric": "^4.6.0",
+    "filestack-react": "^4.0.1",
+    "font-picker-react": "^3.5.2",
+    "jquery": "^3.6.0",
+    "node-sass": "4.14.1",
     "react": "^17.0.2",
+    "react-color": "^2.19.3",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^4.0.3",
+    "react-web-tabs": "^1.0.1",
+    "reactjs-popup": "^2.0.5",
+    "reactstrap": "^8.10.0",
+    "sass-loader": "10.0.5",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
